@@ -17,8 +17,8 @@ import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.BorderPane;
-import javafx.scene.control.TableColumn;
 import javafx.scene.layout.Pane;
+import javafx.scene.paint.Color;
 import javafx.scene.text.Text;
 import javafx.scene.text.TextFlow;
 import javafx.scene.control.Button;
@@ -29,6 +29,7 @@ import java.net.URL;
 import java.text.DecimalFormat;
 import java.util.List;
 import java.util.ResourceBundle;
+import java.util.UUID;
 
 
 public class EventOverviewCtrl implements Initializable {
@@ -52,17 +53,20 @@ public class EventOverviewCtrl implements Initializable {
     @FXML
     public Label backButtonLabel;
     @FXML
-    public TableColumn to;
+    public Label allFilter;
     @FXML
-    public TableColumn from;
+    public Label fromFilter;
     @FXML
-    public TableColumn all;
+    public Label toFilter;
+
+    @FXML
+    public ImageView flagView;
 
     @FXML
     private TextField eventTitle;
 
     @FXML
-    private ListView<Expense> expensesList;
+    private ListView<BorderPane> expensesList;
 
     @FXML
     private ComboBox<Participant> payerSelector;
@@ -73,12 +77,15 @@ public class EventOverviewCtrl implements Initializable {
 
     private Participant payer;
 
+    private int filter;
+
     @Inject
     public EventOverviewCtrl(ServerUtils server, MainCtrl mainCtrl, NotificationService notificationService) {
         this.server = server;
         this.mainCtrl = mainCtrl;
         this.notificationService = notificationService;
         this.event=new Event();
+        this.filter=0;
     }
 
     @Override
@@ -105,24 +112,28 @@ public class EventOverviewCtrl implements Initializable {
         payerSelector.setCellFactory(param -> getPayerListCell());
         payerSelector.setButtonCell(getPayerListCell());
 
-        expensesList.setCellFactory(param -> getExpenseListCell());
-
     }
 
-    public ListCell<Expense> getExpenseListCell() {
-        return new ListCell<>() {
-            @Override
-            protected void updateItem(Expense item, boolean empty) {
-                super.updateItem(item, empty);
-                if (empty || item == null || (payer != null && !item.getPaidBy().getId().equals(payer.getId()))) {
-                    setGraphic(null);
-                    setText(null);
-                } else {
-                    setGraphic(createRow(item));
-                }
-            }
-        };
-    }
+//    public ListCell<Expense> getExpenseListCell() {
+//        return new ListCell<>() {
+//            @Override
+//            protected void updateItem(Expense item, boolean empty) {
+//                super.updateItem(item, empty);
+//                if (empty || item == null){
+//                    setGraphic(null);
+//                    setText(null);
+//                    return;
+//                }
+//                if (payer != null  && (! && filter==2)||(filter==1 && !uuids.contains(payer.getId()))){
+//                    setGraphic(null);
+//                    setText(null);
+//                }
+//                else {
+//                    setGraphic(createRow(item));
+//                }
+//            }
+//        };
+//    }
     public ListCell<Participant> getPayerListCell() {
         return new ListCell<>() {
             @Override
@@ -130,7 +141,7 @@ public class EventOverviewCtrl implements Initializable {
                 super.updateItem(item, empty);
                 if (empty || item == null) {
                     setGraphic(null);
-                    setText(I18N.get("general.all"));
+                    setText(null);
                 } else {
                     setText(item.getName());
                 }
@@ -152,7 +163,7 @@ public class EventOverviewCtrl implements Initializable {
     }
 
     public void reassignParticipants(List<Participant> participantList){
-        System.out.println(participantList.stream().map(x -> x.getName()).toList());
+        System.out.println(participantList.stream().map(Participant::getName).toList());
         textFlow.getChildren().clear();
         if (participantList.isEmpty()) {
             textFlow.getChildren().add(new Label("No participants, yet"));
@@ -161,11 +172,12 @@ public class EventOverviewCtrl implements Initializable {
         for (Participant p : participantList.subList(0, participantList.size() - 1)) {
             Label label = new Label(p.getName());
             label.setOnMouseClicked(e -> editParticipant(p));
+            label.setCursor(Cursor.CLOSED_HAND);
             textFlow.getChildren().add(label);
             textFlow.getChildren().add(new Label(", "));
         }
-        Label lastLabel = new Label(participantList.get(participantList.size() - 1).getName());
-        lastLabel.setOnMouseClicked(e -> editParticipant(participantList.get(participantList.size() - 1)));
+        Label lastLabel = new Label(participantList.getLast().getName());
+        lastLabel.setOnMouseClicked(e -> editParticipant(participantList.getLast()));
         textFlow.getChildren().add(lastLabel);
     }
 
@@ -173,6 +185,7 @@ public class EventOverviewCtrl implements Initializable {
         this.event.setName(this.eventTitle.getText());
         try {
             this.server.updateEvent(this.event);
+            notificationService.showConfirmation("Title Change", "The title has been successfully changed!");
         }
         catch (WebApplicationException e){
             notificationService.showError("Error updating event", "Could not update event title");
@@ -199,21 +212,24 @@ public class EventOverviewCtrl implements Initializable {
         mainCtrl.showAddExpense();
     }
 
+    public void editExpense(Expense e) {
+        mainCtrl.showEditExpense(e);
+    }
+
+
     public void refresh(){
         try {
             Event refreshed = server.getEvent(event.getId());
             System.out.println("refreshing");
             this.setEvent(refreshed);
             payerSelector.setItems(FXCollections.observableArrayList(event.getParticipants()));
-            payerSelector.getItems().add(0, null);
             payerSelector.getSelectionModel().selectFirst();
-            payerSelector.setOnAction(e -> {
-                payer = payerSelector.getValue();
-                expensesList.getItems().clear();
-                expensesList.getItems().addAll(expenses);
-            });
-            expensesList.getItems().clear();
-            expensesList.getItems().addAll(expenses);
+//            payerSelector.setOnAction(e -> {
+//                payer = payerSelector.getValue();
+//                expensesList.getItems().clear();
+//                expensesList.getItems().addAll(expenses);
+//            });
+            this.setAllFilter();
             System.out.println("refreshed");
             /* TO DO:
             * - refresh all data related to the event
@@ -223,22 +239,19 @@ public class EventOverviewCtrl implements Initializable {
         }
     }
 
-    public void editExpense(Expense e) {
-        mainCtrl.showEditExpense(e);
-    }
-
-
     private BorderPane createRow(Expense e) {
         Insets insets = new Insets(0.0, 5.0, 0.0, 5.0);
         BorderPane bp = new BorderPane();
         double convertedAmount = server.convert(e.getAmount(), e.getCurrency(), String.valueOf(mainCtrl.getUser().getPrefferedCurrency()), e.getDate());
         DecimalFormat df = new DecimalFormat("#.00");
-        bp.setLeft(new Text(
+        Text text=new Text(
                 (e.getPaidBy() == null ? "NULL" : e.getPaidBy().getName())
                         + "'s expense - "
                         + df.format(convertedAmount)
                         + " "
-                        + mainCtrl.getUser().getPrefferedCurrency()));
+                        + mainCtrl.getUser().getPrefferedCurrency());
+        text.setFill(Color.WHITESMOKE);
+        bp.setLeft(text);
 
         Image editImage = new Image("client/icons/pencil.png");
         ImageView edit = new ImageView();
@@ -253,4 +266,82 @@ public class EventOverviewCtrl implements Initializable {
         bp.setRight(edit);
         return bp;
     }
+
+    public void setFlag(String language){
+        this.flagView.setImage(new Image("client/icons/flag-"+language+".png"));
+    }
+
+    public void changeLanguage(){
+        switch (this.mainCtrl.getUser().getLanguage()){
+            case "english" -> this.mainCtrl.switchToDutch();
+            case "dutch" -> this.mainCtrl.switchToEnglish();
+            default -> System.out.println("Unsupported language "+this.mainCtrl.getUser().getLanguage());
+        }
+    }
+    public void refreshLanguage(){
+        this.allFilter.setText(I18N.get("general.all"));
+        this.fromFilter.setText(I18N.get("general.from"));
+        this.toFilter.setText(I18N.get("general.to"));
+    }
+
+    public void setToFilter(){
+        filter=1;
+        payer = payerSelector.getValue();
+        expensesList.getItems().clear();
+        expensesList.getItems().addAll(expenses.stream().filter((expense) -> {
+            List<UUID> uuids=expense.getDebts().stream().map(debt -> debt.getParticipant().getId()).toList();
+            return uuids.contains(payer.getId());
+        }).map(this::createRow).toList());
+    }
+
+    public void setFromFilter(){
+        filter=2;
+        payer = payerSelector.getValue();
+        expensesList.getItems().clear();
+        expensesList.getItems().addAll(expenses.stream().filter((expense -> expense.getPaidBy().getId().equals(payer.getId()))).map(this::createRow).toList());
+    }
+
+    public void setAllFilter(){
+        filter=0;
+        payer = payerSelector.getValue();
+        expensesList.getItems().clear();
+        expensesList.getItems().addAll(expenses.stream().map(this::createRow).toList());
+    }
+
+    //    public double calculateIncoming(Participant p){
+//        double incoming = 0;
+//        for (Expense e : event.getExpenses()){
+//            if (!e.getPaidBy().getId().equals(p.getId())){
+//                continue;
+//            }
+//            List<Debt> debts = e.getDebts();
+//            for (Debt d : debts) {
+//                if (d.isPaid()) {
+//                    continue;
+//                }
+//                incoming += d.getAmount();
+//            }
+//        }
+//        return incoming;
+//    }
+//
+//    public double calculateOutgoing(Participant p){
+//        double outgoing = 0;
+//        for (Expense e : event.getExpenses()){
+//            if (e.getPaidBy().getId().equals(p.getId())){
+//                continue;
+//            }
+//            List<Debt> debts = e.getDebts();
+//            for (Debt d : debts) {
+//                if (d.isPaid()) {
+//                    continue;
+//                }
+//                if (d.getParticipant().getId().equals(p.getId())){
+//                    outgoing+=d.getAmount();
+//                }
+//            }
+//        }
+//        return outgoing;
+//    }
+
 }
